--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "nova-platform"
 version = "1.0.0"
-description = "Nova Multimodal AI Platform with Bedrock"
+description = "Nova Multimodal AI Platform with Bedrock (Serverless)"
 readme = "README.md"
 requires-python = ">=3.12"
 license = {text = "MIT"}
@@ -10,20 +10,20 @@ authors = [
 ]
 
 dependencies = [
-    "fastapi>=0.109.0",
-    "uvicorn[standard]>=0.27.0",
-    "pydantic>=2.5.0",
-    "pydantic-settings>=2.1.0",
     "boto3>=1.34.0",
+    "pydantic>=2.5.0",
     "structlog>=24.1.0",
-    "python-multipart>=0.0.6",
-    "httpx>=0.26.0",
-    "redis>=5.0.0",
-    "tenacity>=8.2.0",
-    "circuitbreaker>=2.0.0",
 ]
 
 [project.optional-dependencies]
+api = [
+    # FastAPI server (ローカル開発用)
+    "fastapi>=0.109.0",
+    "uvicorn[standard]>=0.27.0",
+    "python-multipart>=0.0.6",
+    "httpx>=0.26.0",
+]
+
 dev = [
     "pytest>=7.4.0",
     "pytest-asyncio>=0.23.0",
@@ -31,7 +31,6 @@ dev = [
     "mypy>=1.8.0",
     "ruff>=0.1.0",
     "moto[all]>=5.0.0",
-    "fakeredis>=2.20.0",
     "httpx>=0.26.0",
 ]
 
@@ -92,4 +91,3 @@ known-first-party = ["src"]
 branch = true
 source = ["src"]
 omit = ["*/tests/*", "*/__init__.py"]
-
