--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,13 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+# AgentCore Runtime (Nova Sonic WebSocket)
+agentcore = [
+    "bedrock-agentcore>=0.1.0",
+    "websockets>=12.0",
+    "strands-agents>=0.1.0",
+]
+
 api = [
     # FastAPI server (ローカル開発用)
     "fastapi>=0.109.0",
