--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,39 +1,26 @@
 # Dependencies
 node_modules/
-.pnp
+.pnp/
 .pnp.js
 
 # Build
 .next/
 out/
 build/
-dist/
 
-# Environment
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Debug
+# Misc
+.DS_Store
+*.pem
+.env*.local
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# OS
-.DS_Store
-Thumbs.db
 
 # TypeScript
 *.tsbuildinfo
 next-env.d.ts
 
-
-
+# Amplify - 自動生成ファイル
+# amplify_outputs.json は sandbox 実行時に上書きされるため
+# プレースホルダー版をコミットし、生成版は除外
+.amplify/
