--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nova-platform-frontend",
-  "version": "1.0.0",
+  "name": "rd-bedrock-nova-frontend",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@copilotkit/react-core": "^1.6.0",
-    "@copilotkit/react-ui": "^1.6.0",
-    "next": "^15.0.0",
+    "@aws-amplify/ui-react": "^6.5.0",
+    "@aws-amplify/ui-react-storage": "^3.3.0",
+    "aws-amplify": "^6.6.0",
+    "next": "^14.2.0",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+    "react-dom": "^18.3.0",
+    "react-markdown": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
@@ -25,6 +27,3 @@
     "autoprefixer": "^10.4.0"
   }
 }
-
-
-
