chore: .gitignore整備 + Amplify Sandbox修正
- .gitignore 作成（プロジェクトルート）
- amplify/.gitignore 作成
- frontend/.gitignore に amplify_outputs.json 追加
- frontend/amplify_outputs.json を git 追跡から除外
- package.json 追加（ampx sandbox 用）
- amplify/auth/resource.ts: passwordPolicy 削除、verificationEmailBody 修正
- amplify/functions/agent/resource.ts: externalModules 削除
- amplify/functions/agent/strands-agent.ts: S3ファイル取得修正
- amplify/storage/resource.ts: admin グループ参照削除
- amplify/tsconfig.json: strict=false に変更

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -21,6 +21,8 @@ yarn-error.log*
 next-env.d.ts
 
 # Amplify - 自動生成ファイル
-# amplify_outputs.json は sandbox 実行時に上書きされるため
-# プレースホルダー版をコミットし、生成版は除外
 .amplify/
+amplify_outputs.json
+
+# Package lock
+package-lock.json
