--- a/amplify/package.json
+++ b/amplify/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.145",
+    "@types/node": "^20.10.0",
     "typescript": "^5.7.0"
   }
 }
