fix: amplify_outputs.json 自動コピー
- frontend/package.json: predev/prebuild で親ディレクトリからコピー
- package.json: copy:amplify-config, frontend:dev スクリプト追加

使用方法:
1. npm run sandbox (ターミナル1)
2. npm run frontend:dev (ターミナル2)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,10 @@
   "version": "2.0.0",
   "private": true,
   "scripts": {
+    "copy:amplify-config": "cp ../amplify_outputs.json ./amplify_outputs.json 2>/dev/null || echo 'amplify_outputs.json not found - run ampx sandbox first'",
+    "predev": "npm run copy:amplify-config",
     "dev": "next dev",
+    "prebuild": "npm run copy:amplify-config",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
