--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "scripts": {
     "sandbox": "npx ampx sandbox",
-    "sandbox:delete": "npx ampx sandbox delete"
+    "sandbox:delete": "npx ampx sandbox delete",
+    "copy:amplify-config": "cp ./amplify_outputs.json ./frontend/amplify_outputs.json",
+    "frontend:dev": "npm run copy:amplify-config && cd frontend && npm run dev",
+    "dev": "echo '1. Run: npm run sandbox (in terminal 1)' && echo '2. Run: npm run frontend:dev (in terminal 2)'"
   },
   "dependencies": {
     "@aws-amplify/backend-cli": "^1.8.1"
