feat: Add Playwright E2E tests and Vitest unit tests
- Add Playwright E2E tests for:
  - App load verification
  - Auth flow testing
  - API connectivity checks (CORS, fetch errors, regions)
  - localhost hardcode detection

- Add Vitest unit tests for:
  - Agent handler tests
  - Strands agent tests

- All 29 tests passing (17 unit + 12 E2E)
- Verified: no CORS errors, no localhost hardcoding, Tokyo region

--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "sandbox:delete": "npx ampx sandbox delete",
     "copy:amplify-config": "cp ./amplify_outputs.json ./frontend/amplify_outputs.json",
     "frontend:dev": "npm run copy:amplify-config && cd frontend && npm run dev",
-    "dev": "echo '1. Run: npm run sandbox (in terminal 1)' && echo '2. Run: npm run frontend:dev (in terminal 2)'"
+    "dev": "echo '1. Run: npm run sandbox (in terminal 1)' && echo '2. Run: npm run frontend:dev (in terminal 2)'",
+    "test": "npm run test:unit && npm run test:e2e",
+    "test:unit": "cd amplify && npm test",
+    "test:e2e": "npx playwright test",
+    "test:e2e:ui": "npx playwright test --ui",
+    "test:e2e:report": "npx playwright show-report"
   },
   "dependencies": {
     "@aws-amplify/backend-cli": "^1.8.1"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.57.0"
   }
 }
