--- a/amplify/package.json
+++ b/amplify/package.json
@@ -4,7 +4,10 @@
   "type": "module",
   "scripts": {
     "sandbox": "ampx sandbox",
-    "sandbox:delete": "ampx sandbox delete"
+    "sandbox:delete": "ampx sandbox delete",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@aws-amplify/backend": "^1.4.0",
@@ -18,7 +21,8 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.145",
     "@types/node": "^20.10.0",
-    "typescript": "^5.7.0"
+    "typescript": "^5.7.0",
+    "vitest": "^3.1.0"
   }
 }
 
