--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.5.0",
     "@aws-amplify/ui-react-storage": "^3.3.0",
+    "@copilotkit/react-core": "^1.50.1",
+    "@copilotkit/react-ui": "^1.50.1",
     "aws-amplify": "^6.6.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
@@ -24,9 +26,9 @@
     "@types/node": "^22.0.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.6.0",
-    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.6.0"
   }
 }
