--- a/amplify.yml
+++ b/amplify.yml
@@ -8,24 +8,28 @@ applications:
             # Node.js バージョン確認
             - node --version
             - npm --version
+            # Amplify Backend から amplify_outputs.json を取得
+            - echo "Copying amplify_outputs.json to frontend..."
+            - cp amplify_outputs.json frontend/amplify_outputs.json || echo "amplify_outputs.json not found in root, checking other locations..."
             # Frontend 依存関係インストール
             - cd frontend
             - npm ci --legacy-peer-deps
         build:
           commands:
-            # Next.js ビルド
+            # amplify_outputs.json の存在確認
+            - ls -la amplify_outputs.json || echo "Warning: amplify_outputs.json not found"
+            # Next.js 静的エクスポートビルド
             - npm run build
+            # ビルド結果確認
+            - ls -la out/ || echo "Warning: out directory not found"
       artifacts:
-        # Next.js SSR 対応
-        baseDirectory: frontend/.next
+        # 静的エクスポート用（output: 'export'）
+        baseDirectory: frontend/out
         files:
           - '**/*'
       cache:
         paths:
           - frontend/node_modules/**/*
-          - frontend/.next/cache/**/*
-      buildSizeConfig:
-        maxSize: 100MB
     backend:
       phases:
         preBuild:
@@ -40,7 +44,7 @@ applications:
       buildSizeConfig:
         maxSize: 500MB
     environmentVariables:
-      # Bedrock リージョン（us-east-1 推奨: Nova モデル対応）
-      BEDROCK_REGION: us-east-1
+      # Bedrock リージョン（東京リージョン）
+      BEDROCK_REGION: ap-northeast-1
       # ログレベル
       LOG_LEVEL: INFO
