--- a/packages/package.json
+++ b/packages/package.json
@@ -2,21 +2,33 @@
   "name": "@rd-bedrock-nova/packages",
   "version": "1.0.0",
   "private": true,
+  "description": "Clean Architecture + Event Sourcing + CQRS Packages",
+  "type": "module",
   "workspaces": [
     "domain",
     "application",
     "infrastructure",
-    "interfaces"
+    "services"
   ],
   "scripts": {
-    "build": "npm run build --workspaces",
-    "test": "npm run test --workspaces",
+    "build": "tsc -b",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "lint": "npm run lint --workspaces",
-    "clean": "rm -rf node_modules && npm run clean --workspaces"
+    "clean": "rm -rf node_modules dist && npm run clean --workspaces"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
+    "@types/node": "^20.11.0",
+    "@vitest/coverage-v8": "^2.0.0",
     "typescript": "^5.7.0",
     "vitest": "^3.1.0"
+  },
+  "dependencies": {
+    "@aws-sdk/client-bedrock-runtime": "^3.500.0",
+    "@aws-sdk/client-dynamodb": "^3.500.0",
+    "@aws-sdk/client-s3": "^3.500.0",
+    "@aws-sdk/s3-request-presigner": "^3.500.0",
+    "@aws-sdk/util-dynamodb": "^3.500.0"
   }
 }
