refactor: 完全なディレクトリ構造整理
## ルート直下を最小化
残すファイル:
- README.md
- package.json / package-lock.json
- amplify_outputs.json
- .gitignore

## 移動

### infra/docker/ へ
- Dockerfile, Dockerfile.agent-core
- docker-compose.yml

### infra/cdk/ へ
- cdk.json, pyproject.toml, requirements.txt

### infra/amplify/ へ
- amplify.yml

### infra/ へ
- Makefile

### docs/ へ
- DEPLOY.md, architecture-prot.md

### tests/ へ
- e2e/, playwright.config.ts
- playwright-report/, test-results/

## 最終構造
```
rd-bedrock-nova/
├── README.md, package.json, .gitignore
├── frontend/    # UI (Next.js + FSD + Atomic)
├── backend/     # Logic (Clean Arch + ES/CQRS)
├── agents/      # AI (Strands + Bedrock)
├── infra/       # IaC
│   ├── amplify/
│   ├── cdk/
│   └── docker/
├── tests/       # E2E + Unit
└── docs/        # Documentation
```

--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "copy:amplify-config": "cp ./infra/amplify/amplify_outputs.json ./frontend/amplify_outputs.json",
     "frontend:dev": "npm run copy:amplify-config && npm run dev -w frontend",
     "build": "npm run build -w backend && npm run build -w agents",
-    "test": "npm run test -w backend && npm run test -w agents && npm run test:e2e",
+    "test": "npm run test:backend && npm run test:agents && npm run test:e2e",
     "test:backend": "npm test -w backend",
     "test:agents": "npm test -w agents",
-    "test:e2e": "npx playwright test",
-    "test:e2e:ui": "npx playwright test --ui"
+    "test:e2e": "npx playwright test --config=tests/playwright.config.ts",
+    "test:e2e:ui": "npx playwright test --config=tests/playwright.config.ts --ui",
+    "test:e2e:report": "npx playwright show-report tests/playwright-report"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0"
