fix(T043): Fix S3 upload permissions for authenticated users
- Update storage/resource.ts: Allow authenticated users to write to uploads/*
- Add @aws-sdk/client-bedrock-agent-runtime to dependencies
- Fix workspace:* protocol to file: reference in agents/package.json
- Add amplify symlink to .gitignore

Issue: AccessDenied error on s3:PutObject for authenticated Cognito users
Cause: Storage access rule used {entity_id} pattern but frontend used sessionId
Fix: Changed 'uploads/{entity_id}/*' to 'uploads/*' with authenticated access

--- a/agents/package.json
+++ b/agents/package.json
@@ -15,7 +15,7 @@
     "@aws-sdk/client-bedrock-runtime": "^3.500.0",
     "@aws-sdk/client-s3": "^3.500.0",
     "@aws-sdk/s3-request-presigner": "^3.500.0",
-    "@rd-bedrock-nova/backend": "workspace:*"
+    "@rd-bedrock-nova/backend": "file:../backend"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
