--- a/infra/amplify/package.json
+++ b/infra/amplify/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-amplify/backend": "^1.4.0",
     "@aws-amplify/backend-cli": "^1.4.0",
+    "@aws-sdk/client-bedrock-agent-runtime": "^3.700.0",
     "@aws-sdk/client-bedrock-runtime": "^3.700.0",
     "@aws-sdk/client-s3": "^3.700.0",
     "@aws-sdk/s3-request-presigner": "^3.700.0",
