--- a/infra/amplify/package.json
+++ b/infra/amplify/package.json
@@ -14,7 +14,9 @@
     "@aws-amplify/backend-cli": "^1.4.0",
     "@aws-sdk/client-bedrock-agent-runtime": "^3.700.0",
     "@aws-sdk/client-bedrock-runtime": "^3.700.0",
+    "@aws-sdk/client-dynamodb": "^3.700.0",
     "@aws-sdk/client-s3": "^3.700.0",
+    "@aws-sdk/lib-dynamodb": "^3.700.0",
     "@aws-sdk/s3-request-presigner": "^3.700.0",
     "aws-cdk-lib": "^2.170.0",
     "constructs": "^10.4.0"
